Prevent scrollbar from loading bar

--- a/server/static/style.css
+++ b/server/static/style.css
@@ -68,6 +68,7 @@ header h1 {
 	height: 5px;
 	z-index: 3;
 	transition: all 0.3s ease-in-out;
+	overflow: hidden;
 }
 #loader div {
 	height: 100%;
